--- a/client/src/components/layout/Footer/Footer.css
+++ b/client/src/components/layout/Footer/Footer.css
@@ -3,4 +3,7 @@ footer {
   /* position: fixed; */
   bottom: 0;
   width: 100%;
+  text-align: center;
+  background-color: black;
+  color: white;
 }
